twatter-ui/src/app/feed/posts/post-create/post-create.component.scss
:host{
  display: block;
  margin-top: 1rem;
  // margin-left: 10%;
  // width: 80%;
}

mat-form-field,{
  width: 100%;
  border-radius: 0.5rem;
  background-color: rgb(34, 33, 33);
}

mat-card-content {
  margin-top: -1rem;
  position: relative;
}

.scrollbar {
  --scrollbar-color: red;
  --scrollbar-size: 10px;
  --scrollbar-radius: 4px;
}

.card-avatar-image {
  background-image: url('https://www.rushhhentertainment.com/event_user_profile/images/con1.jpg'); //hardcoded for now
  background-size: cover;
  top: 0.5rem;
  left: 0.5rem;
  position: absolute;
  z-index: 1;
}

.text-after-image {
  width: 90%;
  margin-left: 3rem;
  margin-right: -3rem;
}

.header {
  margin-top: -3rem;
  margin-bottom: 1rem;
}

.hover-cursor-text {
  cursor: text;
}

.text-button {
  height: 4rem;
  width: 100%;
  outline: none;
  border: none;
  border-bottom: 1px solid rgb(153, 151, 151);
  text-align: start;
  color: grey;
  background-color: rgb(34, 33, 33);
  font-size: medium;
  padding-top: 1.5rem;
  padding-left: 3.5rem;
  padding-bottom: 3rem;
  border-radius: 0.5rem;
}

.text-button:hover {
  border-bottom: 2px solid rgb(255, 0, 0);
}

.text-dialog {
  display: block;
  margin: auto;
  width: 85%;
  min-height: 3rem;
  max-height: 50vh;
  border: none;
  outline: none;
  border-radius: 0.5rem;
  background-color: rgb(34, 33, 33);
}

// iphoneX
@media only screen and (width: 375px) {
  .text-dialog {
    width: 60%;
  }
}

// ipad
@media only screen and (max-width: 768px) {
  .text-dialog {
    width: 80%;
  }
}

.imitate-form {
  margin-top: 2rem;
  margin-bottom: 3rem;
}

.medium-icon {
  vertical-align: middle;
}

